Agregue un formulario abajo

--- a/SistemaWeb/web/index.html
+++ b/SistemaWeb/web/index.html
@@ -19,5 +19,9 @@ and open the template in the editor.
                 <td>hola</td>
             </tr>
         </table>
+        
+        <form>
+                
+        </form>
     </body>
 </html>
