modificando index5, agregando tabla

--- a/SistemaWeb/web/index.html
+++ b/SistemaWeb/web/index.html
@@ -12,6 +12,12 @@ and open the template in the editor.
     </head>
     <body>
         <div>TODO write content</div>
-        
+        <table>
+            <tr>
+                <td>hola</td>
+                <td>hola</td>
+                <td>hola</td>
+            </tr>
+        </table>
     </body>
 </html>
