modificando index6, agregando tabla td

--- a/SistemaWeb/web/index.html
+++ b/SistemaWeb/web/index.html
@@ -17,6 +17,7 @@ and open the template in the editor.
                 <td>hola</td>
                 <td>hola</td>
                 <td>hola</td>
+                <td>hola2</td>
             </tr>
         </table>
     </body>
